Fixed a nasty styling bug which caused the product cards to be just a little too narrow.

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -103,7 +103,7 @@ label {
 
 .div-container-content {
     display: grid;
-    margin: 1% auto;
+    margin: 1% auto auto auto;
     grid-template-columns: 200px auto;
     grid-column-gap: 10px;
 }
@@ -138,14 +138,13 @@ label {
     display: grid;
     grid-template-columns: auto;
     grid-row-gap: 10px;
-    padding: 0px 10px 10px 10px;
+    padding: 0px 0px 10px 10px;
 }
 
 .product {
     display: grid;
     grid-template-columns: 125pt auto 25%;
-    width: 100%;
-    margin: auto;
+    width: auto;
     border-width: thin;
     border-style: none;
     border-radius: 7pt;
